--- a/presentation/package.json
+++ b/presentation/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "prentation",
+  "name": "presentation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
